[project]
name = "langchain-azure-ai-foundary-tracing"
version = "0.1.0"
description = "testing tracing with langchain"
authors = [
    { name = "Mindfultime", email = "mindful.time@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-inference[opentelemetry]>=1.0.0b6",
    "azure-monitor-opentelemetry>=1.6.4",
    "azure-monitor-opentelemetry-exporter>=1.0.0b32",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.11",
    "openinference-instrumentation-langchain>=0.1.29",
    "opentelemetry-exporter-otlp>=1.28.2",
    "opentelemetry-sdk>=1.28.2",
    "python-dotenv>=1.0.1",
]
